String de conexão

--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,7 +1,6 @@
 {
-  "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQLExpress;Database=labclothingcollectionbd;Trusted_Connection=True;"
-  },
+  "ServerConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=labclothingcollectionbd;Trusted_Connection=True;MultipleActiveResultSets=true;"
+  ,
   "Logging": {
     "LogLevel": {
       "Default": "Information",
