--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,8 @@
 {
-  "ServerConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=labclothingcollectionbd;Trusted_Connection=True;MultipleActiveResultSets=true;"
-  ,
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLExpress;Database=labclothingcollectionbd;Trusted_Connection=True;",
+    "ServerConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=labclothingcollectionbd;Trusted_Connection=True;MultipleActiveResultSets=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
