--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -1,10 +1,13 @@
 {
-  "ServerConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=labclothingcollectionbd;Trusted_Connection=True;MultipleActiveResultSets=true;"
-  ,
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=.\\SQLExpress;Database=labclothingcollectionbd;Trusted_Connection=True;",
+    "ServerConnection": "Server=(LocalDb)\\MSSQLLocalDB;Database=labclothingcollectionbd;Trusted_Connection=True;MultipleActiveResultSets=true;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
